Agregue "Unobtrusive AJAX request" para comentarios en /<ciudad>/

--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -29,7 +29,7 @@
                         <a class="btn btn-success btn-large" href="#">Ir al mapa &raquo;</a>
                         <a class="btn btn-primary btn-large" href="#">Ir al contenido &raquo;</a>
                     </p>
-                    <input type="submit" value="Seleccionar">
+                    <button type="submit" class="btn">Seleccionar</button>
                     </form>
                 </div>
             </div>
