--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,34 @@
 	    <script src="/media/js/bootstrap-collapse.js"></script>
 	    <script src="/media/js/bootstrap-dropdown.js"></script>
 	    <script src="/media/js/bootstrap-alert.js"></script>
+	    <script src="/media/js/date.format.js"></script>
 
 	    <script src="/media/js/scripts.js"></script>
         <script type="text/javascript">
+            $.ajaxSetup({
+                 beforeSend: function(xhr, settings) {
+                     function getCookie(name) {
+                         var cookieValue = null;
+                         if (document.cookie && document.cookie != '') {
+                             var cookies = document.cookie.split(';');
+                             for (var i = 0; i < cookies.length; i++) {
+                                 var cookie = jQuery.trim(cookies[i]);
+                                 // Does this cookie string begin with the name we want?
+                             if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                                 cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                                 break;
+                             }
+                         }
+                     }
+                     return cookieValue;
+                     }
+                     if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
+                         // Only send the token to relative URLs i.e. locally.
+                         xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
+                     }
+                 }
+            });
+
             $(document).ready(function(){
                 $('.dropdown-toggle').dropdown();
                 $('#submit_button').click(function(){
