Doble input en el "seleccion_ciudad", uno para ir al contenido y otro para el mapa.

--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -26,10 +26,9 @@
                         Hacerla mi ciudad predeterminada
                     </label>
                     <p>
-                        <a class="btn btn-success btn-large" href="#">Ir al mapa &raquo;</a>
-                        <a class="btn btn-primary btn-large" href="#">Ir al contenido &raquo;</a>
+                        <button type="submit" name="next" value="mapa" class="btn btn-success btn-large">Ir al mapa &raquo;</button>
+                        <button type="submit" name="next" value="contenido" class="btn btn-primary btn-large">Ir al contenido &raquo;</button>
                     </p>
-                    <button type="submit" class="btn">Seleccionar</button>
                     </form>
                 </div>
             </div>
