--- a/templates/maquetado.html
+++ b/templates/maquetado.html
@@ -10,7 +10,19 @@
                 {% block bloque_izquierda %}{% endblock %}
             </div>
             <div id="bloque_derecha" class="span3">
-                {% block bloque_derecha %}{% endblock %}
+                {% block bloque_derecha %}
+                <h2>Registrate gratis!</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn" href="#">View details &raquo;</a></p>
+
+                <h2>Registrate gratis!</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn" href="#">View details &raquo;</a></p>
+
+                <h2>Registrate gratis!</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn" href="#">View details &raquo;</a></p>
+                {% endblock %}
             </div>
         </div>
 {% endblock %}
