--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,9 +12,9 @@
             <ul class="dropdown-menu">
             {% for ciudad in ciudades %}
                 {% if ciudad == ciudad_actual %}
-                    <li><a href=""><i class="icon-chevron-right"></i> {{ciudad.nombre}}</a></li>
+                    <li><a style="font-weight:bold;" href=""><i class="icon-map-marker"></i> {{ciudad.nombre}}</a></li>
                 {% else %}
-                    <li><a href="{% if es_vista_mapa %}/mapa{% endif %}/{{ciudad.slug}}"><i class="icon-minus"></i> {{ciudad.nombre}}</a></li>
+                    <li><a href="{% if es_vista_mapa %}/mapa{% endif %}/{{ciudad.slug}}"><i class="icon-map-marker"></i> {{ciudad.nombre}}</a></li>
                 {% endif %}
             {% endfor %}
             </ul>
@@ -31,18 +31,13 @@
         <ul class="nav pull-right">
             <li><a><i class="icon-user icon-white"></i> {{ user.username }}</a></li>
             <li class="divider-vertical"></li>
-            <li><a href=""><i class="icon-list icon-white"></i> Perfil</a></li>
+            <li><a href="/usuarios/perfil/"><i class="icon-list icon-white"></i> Perfil</a></li>
             <li><a href="/usuarios/logout/"><i class="icon-share-alt icon-white"></i> Salir</a></li>
         </ul>
         {% else %}
         <ul class="nav pull-right">
-            <li><a href="#"><i class="icon-user icon-white"></i> Iniciar sesion</a></li>
-            <form id="login_form" class="navbar-search" action="/usuarios/login/" method="POST"">
-                {% csrf_token %}
-                <input id="username_input" type="text" name="username" class="search-query span2" placeholder="Usuario">
-                <input id="password_input" type="password" name="password" class="search-query span2" placeholder="Contraseña">
-            </form>
-            <ul class="nav"><li><a id="submit_button">Ingresar &raquo;</a></li></ul>
+            <li><a href="/usuarios/login/"><i class="icon-user icon-white"></i> Iniciar sesion</a></li>
+            <li><a href="/usuarios/registracion/"><i class="icon-edit icon-white"></i> Registrarme</a></li>
         </ul>
         {% endif %}
     </div>
