--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -1,11 +1,15 @@
 <div id="lista-comentarios">
     {% for comment in comment_list %}
-    <div class="row">
-        <div class="span2" align="right">
+    <div class="row-fluid">
+        <div class="span3" align="right">
             <h4>{{ comment.name }}</h4>
             ({{ comment.submit_date|date:"d/m/Y" }})
         </div>
-        <div class="span6 well">{{ comment.comment }}</div>
+        <div class="span9">
+            <div class="well">
+                {{ comment.comment }}
+            </div>
+        </div>
     </div>
     {% endfor %}
 </div>
