--- a/templates/core/ver_ciudad.html
+++ b/templates/core/ver_ciudad.html
@@ -28,26 +28,28 @@
     {% render_comment_list for ciudad_actual %}
 
 	{% get_comment_form for ciudad_actual as form %}
-	<div class='row'>
-		<div id='nuevo-comentario' class='span8'>
+	<div class='row-fluid'>
+		<div id='nuevo-comentario' class='span12'>
 			<h3>Dejanos un comentario:</h3>
             <div id="mensajes-comments"></div>
-	    	<form id="comment-form" action="/comments/post/" method="POST" class="well">
-	    		{% csrf_token %}
-	    		{{ form.content_type }} 
-				{{ form.object_pk }}
-				{{ form.timestamp }}
-				{{ form.security_hash }}
-            	{% if not user.is_authenticated %}
-                    <input id="comment-name" name="name" type="text" placeholder="Tu nombre...">
-                    <input id="comment-email" name="email" type="text" placeholder="Tu email...">
-                {% endif %}
-	    		<textarea class="span7" name='comment' id="comment-textarea" rows="3" placeholder="Tu Comentario..."></textarea>
-	    		<input type="hidden" name="next" value="{% url ver_ciudad ciudad_actual.slug %}" />
-				<input type="hidden" name="honeypot" id="id_honeypot" />
-				<br />
-				<button type="submit" class="btn"><i class="icon-comment"></i> Enviar comentario</button>
-			</form>
+                <div class="well">
+                	<form id="comment-form" action="/comments/post/" method="POST">
+	            		{% csrf_token %}
+	            		{{ form.content_type }} 
+				        {{ form.object_pk }}
+				        {{ form.timestamp }}
+				        {{ form.security_hash }}
+                    	{% if not user.is_authenticated %}
+                            <input id="comment-name" name="name" type="text" placeholder="Tu nombre...">
+                            <input id="comment-email" name="email" type="text" placeholder="Tu email...">
+                        {% endif %}
+	            		<textarea class="span12" name='comment' id="comment-textarea" rows="3" placeholder="Tu Comentario..."></textarea>
+	            		<input type="hidden" name="next" value="{% url ver_ciudad ciudad_actual.slug %}" />
+				        <input type="hidden" name="honeypot" id="id_honeypot" />
+				        <br />
+				        <button type="submit" class="btn pull-right"><i class="icon-comment"></i> Enviar comentario</button>
+			        </form>
+			    </div>
 		</div>
 	</div>
 
