--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,21 @@
     <head>
 	    <meta charset="utf-8">
     	<title>{% block title %}Cualbondi.com.ar{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="/media/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<link href="/media/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
 		<link href="/media/css/estilo.css" rel="stylesheet" type="text/css" />
+		<link href="/media/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+        <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+
 		{% block custom_styles %}{% endblock %}
 
 		{% block custom_top_scripts %}{% endblock %}
 	</head>
 	<body>
 	    {% block navbar %}{% endblock %}
-        <div class="container">
+        <div class="container-fluid">
             <div id="mensajes" align="center">{% include "mensajes.html" %}</div>
 		    {% block content %}{% endblock %}
         </div>
@@ -21,9 +26,7 @@
 	    <!-- Scripts -->
 	    <script src="/media/js/jquery-1.7.1.min.js"></script>
 	    <script src="/media/js/bootstrap.min.js"></script>
-	    <script src="/media/js/bootstrap-collapse.js"></script>
-	    <script src="/media/js/bootstrap-dropdown.js"></script>
-	    <script src="/media/js/bootstrap-alert.js"></script>
+
 	    <script src="/media/js/date.format.js"></script>
 
 	    <script src="/media/js/scripts.js"></script>
