--- a/templates/maquetado.html
+++ b/templates/maquetado.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-        <div class="row">
+        <div class="row-fluid">
             <div id="bloque_izquierda" class="span9">
                 {% block bloque_izquierda %}{% endblock %}
             </div>
