--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -35,9 +35,7 @@
             </ul>
             {% if user.is_authenticated %}
             <ul class="nav pull-right">
-                <li><a><i class="icon-user icon-white"></i> {{ user.username }}</a></li>
-                <li class="divider-vertical"></li>
-                <li><a href="/usuarios/perfil/"><i class="icon-list icon-white"></i> Perfil</a></li>
+                <li><a href="/usuarios/perfil/"><i class="icon-user icon-white"></i> {{ user.username }}</a></li>
                 <li><a href="/usuarios/logout/"><i class="icon-share-alt icon-white"></i> Salir</a></li>
             </ul>
             {% else %}
