--- a/templates/core/ver_ciudad.html
+++ b/templates/core/ver_ciudad.html
@@ -1,6 +1,10 @@
 {% extends "maquetado.html" %}
 {% load comments %}
 
+{% block custom_top_scripts %}
+    {{mapa.media}}
+{% endblock %}
+
 {% block bloque_izquierda %}
     <ul class="breadcrumb">
         <li><a href="/">Inicio</a> <span class="divider">></span></li>
@@ -8,6 +12,8 @@
     </ul>
 
     <h1>{{ciudad_actual.nombre}}</h1>
+
+    <div>{{mapa}}</div>
 
     <table class="table table-striped table-bordered table-condensed">
         <thead>
